<resources>
    <string name="app_name">ShoeStore</string>
    <string name="createNewAcount">Create  Account</string>
    <string name="login">Login</string>
    <string name="welcomeScreenFirstText">Welcome</string>
    <string name="welcomeScreenSecondText">Now, our store have an App!, see the instructions clicking the button</string>
    <string name="button_to_see_shoe_description">button to see shoe description</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="createAccount">Sign in</string>
    <string name="loginAccount">Login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginTitleTextView">ShoeStore\'s</string>
    <string name="instructionsTitle">Instructions</string>
    <string name="instructions">Let\'s see the Instructions</string>
    <string name="catalog">Shoe\'s Catalog</string>
    <string name="logout">Logout</string>
    <string name="talla">Size: %d</string>
    <string name="shoeList_Title_TextView">List of Shoes</string>
    <string name="create_a_new_shoe">Create a New Shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="instructions_text1">\n\n This app is for add views to a LinearLayout.\n\n This views
        will contain a special Layout with a Shoe item within.</string>
    <string name="instructions_text2">\n To add a View, you must click the Button in the lower right
        corner to navigate to the Shoe Maker, then, when you navigate back, the listFragment will create
        a new View!</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
</resources>
