<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="LoginFragment"
            type="com.udacity.shoestore.fragments.login.LoginFragment"/>
        <variable
            name="SharedViewModel"
            type="com.udacity.shoestore.viewmodel.SharedViewModel" />
    </data>
    <!-- here i use Constraint Layout only for show that i know it. i could do the same
     with linear layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color">

        <androidx.cardview.widget.CardView
            android:id="@+id/loginCardView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/fragmentTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pacifico"
                    android:text="@string/loginTitleTextView"
                    android:textColor="@color/black"
                    android:textSize="32sp" />

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    app:srcCompat="@drawable/loginimage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="92dp"
                    android:background="@drawable/button_corners"
                    android:padding="5dp"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/loginFragmentUserName_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    app:drawableStartCompat="@drawable/ic_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="92dp"
                    android:background="@drawable/button_corners"
                    android:padding="5dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/loginFragmentUserPassword_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    app:drawableStartCompat="@drawable/ic_lock" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            style="@style/buttons"
            android:id="@+id/createAccount_button"
            android:onClick="@{()-> LoginFragment.createAccountButtonMethod()}"
            android:text="@string/createAccount"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginCardView" />

        <Button
            style="@style/buttons"
            android:id="@+id/login_button"
            android:onClick="@{() -> LoginFragment.loginButtonMethod()}"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/createAccount_button"
            app:layout_constraintTop_toBottomOf="@+id/loginCardView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>