<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Here i use Linear Layout to keep things simple -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/welcomeCardView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/fragmentTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:text="@string/welcomeScreenFirstText" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/girasol" />

                <TextView
                    android:id="@+id/welcomeText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/welcomeScreenSecondText"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            style="@style/buttons"
            android:id="@+id/welcomeButton"
            android:layout_gravity="center_horizontal"
            android:text="@string/instructions"
            />
    </LinearLayout>

</layout>